--- a/src/app/multiple-choice/multiple-choice.component.html
+++ b/src/app/multiple-choice/multiple-choice.component.html
@@ -19,14 +19,10 @@
           <div class="col-sm-5">
             <input type="number" class="form-control" id="sem-semester">
           </div>
-          <label class="col-sm-5"><input type="checkbox" class="checkbox" value="1">Shuffle choice</label>
+          <label class="col-sm-5 pl-1 pt-1" style="color: console.dir(object);"><input type="checkbox" class="checkbox" value="1">     
+              Shuffle
+          </label>
         </div> 
-        <div class="form-group row">
-          <label for="sem-semester" class="col-sm-2 col-form-label js-example-basic-single">Reference:</label>
-          <div class="col-sm-10">
-            <input type="taker-id" class="form-control" id="sem-semester">
-          </div>
-        </div>
         <div class="all_ans">
           <label for="sem-semester" class="col-sm-2 col-form-label">Choice:</label>
           <div id="options">
