--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -23,7 +23,7 @@
               <table class="table table-striped table-bordered table-hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
                   <tr>
-                    <th>#</th>
+                    <th></th>
                     <th>Created Day</th>
                     <th>Updated Day</th>
                     <th></th>
@@ -59,8 +59,8 @@
         </button>
       </div>
       <div class="modal-body ">
-          <button class="btn btn-success">Multiple Choice</button>
-          <button class="btn btn-success">True/False Choice</button>
+          <button class="btn btn-success"> <a href="multiple-choice" style="text-decoration: none;color: aliceblue;" > Multiple Choice</a></button>
+          <button class="btn btn-success"> <a href="true-false-choice" style="text-decoration: none;color: aliceblue;" > True False Choice</a></button>
     </div>
   </div>
 </div>
