--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,36 +2,47 @@
   <nav class="sidebar-nav">
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/"><i class="icon-speedometer"></i> MENU </a>
+        <a class="nav-link" routerLink="/"><i class="fas fa-home"></i> MENU </a>
       </li>      
       <li class="nav-item nav-dropdown">
-        <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-book-open"></i>EXAM</a>
+        <a class="nav-link nav-dropdown-toggle" href="#"><i class="fas fa-book"></i>EXAM</a>
         <ul class="nav-dropdown-items">
           <li class="nav-item">
-            <a class="nav-link" routerLink=""><i class="icon-book-open"></i>EXAM TAKING</a>
+            <a class="nav-link" routerLink=""><i class="fas fa-book"></i>EXAM TAKING</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink=""><i class="icon-book-open"></i>GROUP</a>
+            <a class="nav-link" routerLink=""><i class="fas fa-book"></i>GROUP</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink=""><i class="icon-book-open"></i>TEST</a>
+            <a class="nav-link" routerLink=""><i class="fas fa-book"></i>TEST</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/takers"><i class="icon-book-open"></i>TAKER</a>
+            <a class="nav-link" routerLink="/takers"><i class="fas fa-book"></i>TAKER</a>
           </li>
         </ul>
       </li>
       <li class="nav-item nav-dropdown">
-        <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-book-open"></i>BANK</a>
+        <a class="nav-link nav-dropdown-toggle" href="#"><i class="fab fa-bandcamp"></i>BANK</a>
         <ul class="nav-dropdown-items">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/questions"><i class="icon-book-open"></i>QUESTION</a>
+            <a class="nav-link" routerLink="/questions"><i class="fab fa-bandcamp"></i>QUESTION</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="#"><i class="fab fa-bandcamp"></i>ANSWER</a>
           </li>
         </ul>
       </li>
 
       <li class="nav-item ">
         <a class="nav-link"  routerLink="/users" ><i class="icon-people"></i> USERS</a>
+      </li>
+
+      <li class="nav-item ">
+        <a class="nav-link"  routerLink="/profile-setting" ><i class="fas fa-cogs"></i>SETTING</a>
+      </li>
+
+      <li class="nav-item ">
+        <a class="nav-link"  routerLink="/login" ><i class="fas fa-sign-out-alt"></i> LOGOUT</a>
       </li>
       <!-- <li class="divider"></li> -->
       
