--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,37 @@
-<body class="app flex-row align-items-center">
+<body class="logins app flex-row align-items-center">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-4">
         <div class="card-group">
-          <div class="card p-4">
+          <div class="card p-4" style="background-color: rgba(255, 255, 255, 0.53)">
             <div class="card-body">
               <h1>Login</h1>
-              <p class="text-muted">Sign In to your account</p>
+              <p class="text-muted">Sign in to your account</p>
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="icon-user"></i></span>         
+                  <span class="input-group-text">
+                    <i class="icon-user"></i>
+                  </span>
                 </div>
-                <input type="text" class="form-control" name="username" placeholder="Username" [(ngModel)]="username"> 
+                <input type="text" class="form-control" name="username" placeholder="Username" [(ngModel)]="username">
               </div>
               <div class="input-group mb-4">
                 <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="icon-lock"></i></span>
+                  <span class="input-group-text">
+                    <i class="icon-lock"></i>
+                  </span>
                 </div>
                 <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="password">
               </div>
               <div class="row">
-                <div class="col-12">
+                <div class="col-7"></div>
+                <div class="col-5">
                   <button type="button" class="btn btn-primary px-4" (click)="login()">Login</button>
                 </div>
               </div>
             </div>
-          </div>          
-        </div>    
+          </div>
+        </div>
       </div>
     </div>
   </div>
