--- a/src/app/profile-setting/profile-setting.component.html
+++ b/src/app/profile-setting/profile-setting.component.html
@@ -2,7 +2,7 @@
 
   <ol class="breadcrumb">
     <li class="breadcrumb-item">Home</li>
-    <li class="breadcrumb-item"><a routerLink="/">Admin</a></li>
+    <li class="breadcrumb-item">>Users</li>
     <li class="breadcrumb-item active">Profile settings</li>
   </ol>
 
@@ -18,7 +18,7 @@
                 <div class="form-group row" >
                     <label for="inputAccount" class="col-sm-2 col-form-label">User Account</label>
                     <div class="col-sm-10">
-                        <input type="email" disabled class="form-control" id="inputEmail3" placeholder="User Account">
+                        <input type="text" disabled class="form-control" id="inputEmail3" placeholder="User Account">
                     </div>
                 </div>
                 <div class="form-group row">
