--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -1,8 +1,10 @@
 <main class="main">
   <ol class="breadcrumb">
     <li class="breadcrumb-item">Home</li>
-    <li class="breadcrumb-item"><a href="#">Admin</a></li>
-    <li class="breadcrumb-item active">Question_bank</li>        
+    <li class="breadcrumb-item">
+      <a href="#">Users</a>
+    </li>
+    <li class="breadcrumb-item active">Question_bank</li>
   </ol>
   <div class="container">
     <div class="animated fadeIn">
@@ -13,7 +15,7 @@
               <h2 class="header-text"></h2>
             </div>
             <div class="col-sm-1" id="header-btn-add">
-              <button type="button" class="btn btn-add btn-primary" data-toggle="modal" data-target="#exampleModalCenter" (click)="state(1)">+Add</button>
+              <button type="button" class="btn btn-add btn-primary" data-toggle="modal" data-target="#exampleModalCenter" (click)="state(1)">Add</button>
             </div>
           </div>
         </div>
@@ -22,7 +24,7 @@
             <div class="col-sm-12">
               <table class="table table-striped table-bordered table-hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
-                  <tr> 
+                  <tr>
                     <th></th>
                     <th>Created Day</th>
                     <th>Updated Day</th>
@@ -35,9 +37,13 @@
                     <td class="center">{{result.createdAt| date:'dd-MM-yyyy HH:mm a ' }}</td>
                     <td class="center">{{result.updatedAt | date:'dd-MM-yyyy HH:mm a ' }}</td>
                     <td>
-                      <a data-toggle="modal" data-target="#exampleModalCenter" (click)="state(2,result.que_id)"><i class="fa fa-edit text-success"></i></a>
+                      <a data-toggle="modal" data-target="#exampleModalCenter" (click)="state(2,result.que_id)">
+                        <i class="fa fa-edit text-success"></i>
+                      </a>
                       <i class="fa fa-remove text-danger" (click)="delete(result.que_id)"></i>
-                      <a data-toggle="modal" data-target="#detail"><i class="fa fa-info"></i></a>
+                      <a data-toggle="modal" data-target="#detail">
+                        <i class="fa fa-info"></i>
+                      </a>
                     </td>
                   </tr>
                 </tbody>
@@ -46,22 +52,156 @@
           </div>
         </div>
       </div>
-    </div> 
-  </div>     
+    </div>
+  </div>
 </main>
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog " role="document">
-    <div class="modal-content">
+    <div class="mod1 modal-content ">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLongTitle">Chọn loại câu hỏi</h5>
         <button type="button" class="close" data-dismiss="modal" (click)="reset()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body ">
-          <button class="btn btn-success"> <a href="multiple-choice" style="text-decoration: none;color: aliceblue;" > Multiple Choice</a></button>
-          <button class="btn btn-success"> <a href="true-false-choice" style="text-decoration: none;color: aliceblue;" > True False Choice</a></button>
+      <div class="modal-body">
+
+        <button data-toggle="modal"  data-target="#exampleModal" data-dismiss="modal" class="btn btn-success">
+          Multiple Choice
+        </button>
+        <button data-toggle="modal"  data-target="#exampleModal1" data-dismiss="modal" class="btn btn-success">
+         True False Choice
+        </button>
+
+      </div>
     </div>
   </div>
 </div>
-</div>    
+<div class="modal fade bd-example-modal-md " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-md" role="document">
+      <div class=" modal-content ">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Multiple choice</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">  
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          
+                <form action="" method="POST" >
+                <div class="form-group row">
+                  <label class="col-md-2 col-form-label js-example-basic-single col-sm-2">Question:</label>
+                  <div class="col-md-10 col-sm-10">
+                    <textarea class="form-control" id="sem-semester" rows="5"></textarea>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="col-sm-2">Score:</div>
+                  <div class="col-sm-3">
+                    <input type="number" class="form-control" id="sem-semester">
+                  </div>
+                </div> 
+                <div class="all_ans">
+                  <label class="col-sm-2 col-form-label">Choice:</label>
+                  <div id="options">
+                    <div class="form-group row">        
+                      <div class="col-sm-2 ">
+                        <p class="form-control-plaintext">A. <input type="checkbox" class="checkbox" value="1"></p>            
+                      </div>
+                      <div class="col-sm-10">
+                        <input type="text" class="form-control sem-semester" placeholder="Option">
+                      </div>
+                    </div>
+                    <div class="form-group row">        
+                        <div class="col-sm-2">
+                          <p class="form-control-plaintext">B. <input type="checkbox" class="checkbox" value="1"></p>            
+                        </div>
+                        <div class="col-sm-10">
+                          <input type="text" class="form-control sem-semester" placeholder="Option">
+                        </div>            
+                      </div>
+                  </div>
+                </div> 
+                <div class="form-group row">            
+                  <div class="col-12">
+                      <i class="btn btn-primary fa fa-plus pointer" id="add-row"></i> 
+                      <i class="btn btn-danger fa fa-minus pointer" id="del-row"></i> 
+                  </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-6">                
+                    </div>
+                  <div class="col-sm-2">
+                  <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+                  <div class="col-sm-2">
+                  <button type="button" data-dismiss="modal" class="btn btn-secondary">Cancel</button>
+                  </div>
+                  <div class="col-sm-2">
+                  <button type="reset" class="btn btn-secondary">Clear</button>
+                  </div>
+                </div>
+              </form>             
+              
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade bd-example-modal-md " id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-md" role="document">
+      <div class=" modal-content ">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">True False Choice</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">  
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          
+                <form action="" method="POST" >
+                <div class="form-group row">
+                  <label class="col-md-2 col-form-label js-example-basic-single col-sm-2">Question:</label>
+                  <div class="col-md-10 col-sm-10">
+                    <textarea class="form-control" id="sem-semester" rows="5"></textarea>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="col-sm-2">Score:</div>
+                  <div class="col-sm-3">
+                    <input type="number" class="form-control" id="sem-semester">
+                  </div>
+                </div> 
+                <div class="all_ans">
+                  <label class="col-sm-2 col-form-label">Choice:</label>
+                  <div class="custom-control custom-radio">
+                    <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
+                    <label  for="customRadio1">True</label>
+                  </div>
+                  <div class="custom-control custom-radio">
+                    <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
+                    <label  for="customRadio2">False</label>
+                  </div>
+                  
+                </div> 
+                <div class="form-group row">
+                    <div class="col-sm-6">                
+                    </div>
+                  <div class="col-sm-2">
+                  <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+                  <div class="col-sm-2">
+                  <button type="button" data-dismiss="modal" class="btn btn-secondary">Cancel</button>
+                  </div>
+                  <div class="col-sm-2">
+                  <button type="reset"  class="btn btn-secondary">Clear</button>
+                  </div>
+                </div>
+              </form>             
+              
+
+        </div>
+      </div>
+    </div>
+  </div>
