--- a/src/app/subjects/subjects.component.html
+++ b/src/app/subjects/subjects.component.html
@@ -2,7 +2,7 @@
 <main class="main">
   <ol class="breadcrumb">
     <li class="breadcrumb-item">Home</li>
-    <li class="breadcrumb-item"><a routerLink="/">Admin</a></li>
+    <li class="breadcrumb-item">Users</li>
     <li class="breadcrumb-item active">Subjects</li>
   </ol>
   <div class="container-fluid">
@@ -10,11 +10,11 @@
       <div class="card">
         <div class="card-header">
           <div class="row">
-            <div class="col mr-auto">
+            <div class="col-11">
               <h2 class="header-text">Subjects</h2>
             </div>
             <div class="col-sm-1">
-              <button type="button" class="btn btn-add btn-primary" data-toggle="modal" data-target="#exampleModalCenter" (click)="state(1)">+Add</button>
+              <button type="button" class="btn btn-add btn-primary" data-toggle="modal" data-target="#exampleModalCenter" (click)="state(1)">Add</button>
             </div>
           </div>
         </div>
@@ -24,11 +24,11 @@
               <table class="table table-striped table-bordered table-hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
                   <tr>
-                    <th>#</th>
-                    <th>Mã Chủ Đề</th>
-                    <th>Tên Chủ Đề</th> 
-                    <th>Ngày Tạo</th>
-                    <th>Ngày Cập Nhật</th>
+                    <th></th>
+                    <th>Subject code</th>
+                    <th>Subject Name</th>
+                    <th>Created Day</th>
+                    <th>Updated Day</th>
                     <th></th>
                   </tr>
                 </thead>
@@ -67,11 +67,11 @@
         <table class="table table-striped table-bordered table-hover">
           <thead>
             <tr>
-              <th>#</th>
-              <th>Mã Chủ Đề</th>
-              <th>Tên Chủ Đề</th> 
-              <th>Ngày Tạo</th>
-              <th>Ngày Cập Nhật</th>
+              <th></th>
+              <th>Subject code</th>
+              <th>Subject Name</th>
+              <th>Created Day</th>
+              <th>Updated Day</th>
             </tr>
           </thead>
           <tbody>
@@ -108,14 +108,14 @@
               <input  name="subjectcode" class="form-control" placeholder="Subject Code" required minlength="4" maxlength="20" autocomplete="off" #subjectcoderr="ngModel" [(ngModel)]="subjectcode" (input)="unique()">
               <div *ngIf="subjectcoderr.invalid && (subjectcoderr.dirty || subjectcoderr.touched)" class="alert alert-danger">
                 <div *ngIf="subjectcoderr.errors.required">
-                  Cần Nhập mã chủ đề
+                    Unless 4 characters
                 </div>
                 <div *ngIf="subjectcoderr.errors.minlength">
-                  Phải Ít Nhất 4 Ký Tự
+                  Unless 4 characters
                 </div>  
               </div>  
               <div *ngIf="unique_var && (subjectcoderr.dirty || subjectcoderr.touched)" class="alert alert-danger">
-                Dữ Liệu Trùng
+                Data
               </div>         
             </div>
           </div>
@@ -125,7 +125,7 @@
               <input name="subjectname" class="form-control" placeholder="Subject Code" minlength="4" maxlength="100" autocomplete="off" #subjectnamerr="ngModel" [(ngModel)]="subjectname">
               <div *ngIf="subjectnamerr.invalid && (subjectnamerr.dirty || subjectnamerr.touched)" class="alert alert-danger">
                 <div *ngIf="subjectnamerr.errors.minlength">
-                  Phải Ít Nhất 4 Ký Tự
+                  Unless 4 characters
                 </div>
               </div>
             </div>
