--- a/src/app/takers/takers.component.html
+++ b/src/app/takers/takers.component.html
@@ -1,8 +1,8 @@
 <main class="main">
   <ol class="breadcrumb">
     <li class="breadcrumb-item">Home</li>
-    <li class="breadcrumb-item"><a routerLink="/">Admin</a></li>
-    <li class="breadcrumb-item active">Users</li>
+    <li class="breadcrumb-item"> <a href="/users">Users</a> </li>
+    <li class="breadcrumb-item active">Exam Takers</li>
   </ol>
 
   <div class="container-fluid">
@@ -11,10 +11,10 @@
         <div class="card-header">
           <div class="row">
             <div class="col mr-auto">
-              <h2 class="header-text">Takers</h2>
+              <h2 class="header-text">Exam Takers</h2>
             </div>
             <div class="col-sm-1" id="header-btn-add">
-              <button type="button" class="btn btn-add btn-primary" data-toggle="modal" data-target="#exampleModalCenter">+Add</button>
+              <button type="button" class="btn btn-add btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Add</button>
             </div>
           </div>
         </div>
@@ -24,7 +24,7 @@
               <table style="width: 100%" class="table table-striped table-bordered table-hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
                   <tr>
-                    <th>#</th>
+                    <th></th>
                     <th>Account</th>
                     <th>First Name</th>
                     <th>Last Name</th>
