--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" [disabled]="myForm.invalid || unique_var" (click)="save_add()">Save</button>
+            <button type="button" class="btn btn-primary" (click)="save_add()">Save</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
     </div>
