--- a/src/app/profile-setting/profile-setting.component.html
+++ b/src/app/profile-setting/profile-setting.component.html
@@ -18,7 +18,7 @@
                 <div class="form-group row" >
                     <label for="inputAccount" class="col-sm-2 col-form-label">User Account</label>
                     <div class="col-sm-10">
-                        <input type="text" disabled class="form-control" id="inputEmail3" placeholder="User Account">
+                        <input type="text" disabled class="form-control" id="inputEmail1" placeholder="User Account">
                     </div>
                 </div>
                 <div class="form-group row">
@@ -37,18 +37,18 @@
                 <div class="form-group row" >
                     <label for="inputFirstname" class="col-sm-2 col-form-label">Full Name</label>
                     <div class="col-sm-4">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="First Name">
+                        <input type="email" class="form-control" id="inputEmail2" placeholder="First Name">
                     </div>
                     <div class="col-sm-4">
-                      <input type="email" class="form-control" id="inputEmail3" placeholder="Last Name">
+                      <input type="email" class="form-control" id="inputEmail4" placeholder="Last Name">
                   </div>
                 </div>
-                <div class="form-group row" >
-                    <label for="inputBirthday" class="col-sm-2 col-form-label">Birthday:</label>
+                <div class="form-group row">
+                    <label for="inputDob" class="col-sm-2 col-form-label">Birth Day: </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control date-of-birth" name="birthdate" id="profile-DOB" value="10/24/1984" />
+                      <input type="text"  class="form-control date-of-birth" id="user-DOB" name="dob">
                     </div>
-                </div>
+                  </div>
                 <div class="form-group row" >
                     <label for="inputEmail" class="col-sm-2 col-form-label">Email:</label>
                     <div class="col-sm-10">
@@ -58,7 +58,7 @@
                 <div class="form-group row" >
                     <label for="inputPhonenumber" class="col-sm-2 col-form-label">Phone Number:</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Phone Number">
+                        <input type="number" class="form-control" id="inputEmail5" placeholder="Phone Number">
                     </div>
                 </div>
                 <div class="form-group row">
