--- a/src/app/takers/takers.component.html
+++ b/src/app/takers/takers.component.html
@@ -62,7 +62,7 @@
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Add User</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle">Add exam taker</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="inputDob" class="col-sm-2 col-form-label">DOB: </label>
+            <label for="inputDob" class="col-sm-2 col-form-label">Birth Day: </label>
             <div class="col-sm-10">
               <input type="text"  class="form-control date-of-birth" id="user-DOB" name="dob">
             </div>
@@ -99,7 +99,7 @@
           <div class="form-group row">
             <label for="inputGender" class="col-sm-2 col-form-label">Gender: </label>
             <div class="col-sm-10" id="radio-groups">
-              <input class="isadmin" type="radio" name="gender" checked>Male
+              <input class="isadmin" type="radio" name="gender" checked>Male 
               <input class="isadmin" type="radio" name="gender" >Female
             </div>
           </div>
